@@ -2,30 +2,90 @@ package it.pagopa.atmlayer.wf.task.util;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.math.BigInteger;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.security.InvalidKeyException;
+import java.security.KeyFactory;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
+import java.security.NoSuchAlgorithmException;
+import java.security.interfaces.RSAPublicKey;
+import java.security.spec.InvalidKeySpecException;
+import java.security.spec.RSAPublicKeySpec;
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
+import java.util.Collection;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
 import java.util.UUID;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import javax.crypto.BadPaddingException;
+import javax.crypto.Cipher;
+import javax.crypto.IllegalBlockSizeException;
+import javax.crypto.NoSuchPaddingException;
+
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.json.JsonMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 
 import it.pagopa.atmlayer.wf.task.bean.Device;
 import it.pagopa.atmlayer.wf.task.bean.State;
+import lombok.AccessLevel;
+import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class Utility {
-    static private ObjectMapper om = new ObjectMapper();
+    private static ObjectMapper om = JsonMapper.builder()
+            .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES)
+            .build();
+
+    private static final String CDN_GET_FILE = "CDN.getResource";
+
+    /*
+     * Caratteri di escape standard HTML
+     */
+    public static final Map<String, String> ESCAPE_CHARACTER = new HashMap<>();
+
+    static {
+        ESCAPE_CHARACTER.put("&#192;", "À");
+        ESCAPE_CHARACTER.put("&#193;", "Á");
+        ESCAPE_CHARACTER.put("&#200;", "È");
+        ESCAPE_CHARACTER.put("&#201;", "É");
+        ESCAPE_CHARACTER.put("&#204;", "Ì");
+        ESCAPE_CHARACTER.put("&#205;", "Í");
+        ESCAPE_CHARACTER.put("&#210;", "Ò");
+        ESCAPE_CHARACTER.put("&#211;", "Ó");
+        ESCAPE_CHARACTER.put("&#217;", "Ù");
+        ESCAPE_CHARACTER.put("&#218;", "Ú");
+        ESCAPE_CHARACTER.put("&#224;", "à");
+        ESCAPE_CHARACTER.put("&#225;", "á");
+        ESCAPE_CHARACTER.put("&#232;", "è");
+        ESCAPE_CHARACTER.put("&#233;", "é");
+        ESCAPE_CHARACTER.put("&#236;", "ì");
+        ESCAPE_CHARACTER.put("&#237;", "í");
+        ESCAPE_CHARACTER.put("&#242;", "ò");
+        ESCAPE_CHARACTER.put("&#243;", "ó");
+        ESCAPE_CHARACTER.put("&#249;", "ù");
+        ESCAPE_CHARACTER.put("&#250;", "ú");
+        ESCAPE_CHARACTER.put("&#8364;", "€");
+        ESCAPE_CHARACTER.put("&#9632;", "■");
+    }
 
     /**
      * Converts an object to a JSON representation.
@@ -41,7 +101,7 @@ public class Utility {
      *         occurs.
      */
     public static String getJson(Object object) {
-        String result = null;       
+        String result = null;
         try {
             result = om.writer().writeValueAsString(object);
         } catch (JsonProcessingException e) {
@@ -51,7 +111,7 @@ public class Utility {
     }
 
     public static byte[] setTransactionIdInJson(byte[] entity, String transactionId) {
-        String result = null;       
+        String result = null;
         try {
             JsonNode jn = om.readTree(new String(entity));
             ((ObjectNode) jn).put("transactionId", transactionId);
@@ -79,7 +139,7 @@ public class Utility {
      */
     public static String getObscuredJson(Object object) {
         String result = null;
-       
+
         try {
             result = om.writerWithView(Object.class).writeValueAsString(object);
         } catch (JsonProcessingException e) {
@@ -88,9 +148,8 @@ public class Utility {
         return result;
     }
 
-
     public static <T> T getObject(String json, Class<T> clazz) {
-        T result = null;      
+        T result = null;
         try {
             result = om.readValue(json, clazz);
         } catch (JsonProcessingException e) {
@@ -112,12 +171,11 @@ public class Utility {
      */
     public static String generateTransactionId(State state) {
         Device device = state.getDevice();
-        return (device.getBankId()
-                + "-" + (device.getBranchId() != null ? device.getBranchId() : "")
-                + "-" + (device.getCode() != null ? device.getCode() : "")
-                + "-" + (device.getTerminalId() != null ? device.getTerminalId() : "")
-                + "-" + (device.getOpTimestamp().getTime())
-                + "-" + UUID.randomUUID().toString()).substring(0, Constants.TRANSACTION_ID_LENGTH);
+        return (device.getBankId() + "-" + (device.getBranchId() != null ? device.getBranchId() : "") + "-"
+                + (device.getCode() != null ? device.getCode() : "") + "-"
+                + (device.getTerminalId() != null ? device.getTerminalId() : "") + "-"
+                + (device.getOpTimestamp().getTime()) + "-" + UUID.randomUUID().toString())
+                .substring(0, Constants.TRANSACTION_ID_LENGTH);
     }
 
     /**
@@ -141,9 +199,6 @@ public class Utility {
     public static Set<String> findStringsByGroup(String inputString, String regex) {
         Set<String> groups = new HashSet<>();
 
-        /* Set<String> forObjectsAttributes = extractObjects(regex);
-        log.debug("For object attributes {} :", forObjectsAttributes); */
-
         Pattern pattern = Pattern.compile(regex);
         Matcher matcher = pattern.matcher(inputString);
         while (matcher.find()) {
@@ -153,36 +208,11 @@ public class Utility {
             }
         }
 
-        /* groups = forObjectsAttributes.isEmpty() ? groups
-                : groups.stream()
-                        .filter(groupsElement -> forObjectsAttributes.stream()
-                                .noneMatch(groupsElement::startsWith))
-                        .collect(Collectors.toSet()); */
-
         return groups;
     }
 
     /**
-     * Extract content of attribute object in for tags.
      * 
-     * @param html - the input html
-     * @return a Set containing the contents of object attributes
-     */
-    public static Set<String> extractObjects(String html) {
-        Set<String> objectSet = new HashSet<>();
-
-        Pattern pattern = Pattern.compile(Constants.FOR_REGEX);
-        Matcher matcher = pattern.matcher(html);
-
-        while (matcher.find()) {
-            String objectValue = matcher.group(1);
-            objectSet.add(objectValue);
-        }
-
-        return objectSet;
-    }
-
-    /**
      * Finds and extracts matched substrings from an input string using a regular
      * expression.
      *
@@ -263,14 +293,17 @@ public class Utility {
      * @return An InputStream that provides access to the content of the specified
      *         file.
      * @throws IOException
+     * @throws URISyntaxException 
      */
-    public static InputStream getFileFromCdn(String path) throws IOException {
+    public static InputStream getFileFromCdn(String path) throws IOException, URISyntaxException {
 
         InputStream ioStream = null;
         log.info("Getting file [{}]", path);
-
-        ioStream = new URL(path).openStream();
-
+        long start = System.currentTimeMillis();
+        URI uri = new URI(path);
+        ioStream = uri.toURL().openStream();
+        long stop = System.currentTimeMillis();
+        log.info(" {} - Elapsed time [ms] = {}", CDN_GET_FILE, stop - start);
         return ioStream;
     }
 
@@ -284,4 +317,131 @@ public class Utility {
     public static void logElapsedTime(String label, long start, long stop) {
         log.info(" - {} - Elapsed time [ms] = {}", label, stop - start);
     }
+
+    /**
+     * <p>
+     * Test input String value to check if it's null or empty
+     * </p>
+     *
+     * @param value - value to be checked
+     * @return true if the input value is null or empty, false otherwise
+     */
+    public static boolean nullOrEmpty(String value) {
+        return value == null || value.trim().isEmpty();
+    }
+
+    /**
+     * <p>
+     * Test input Collection value to check if it's null or empty
+     * </p>
+     *
+     * @param value - value to be checked
+     * @return true if the input value is null or empty, false otherwise
+     */
+    public static boolean nullOrEmpty(Collection<?> value) {
+        return value == null || value.isEmpty();
+    }
+
+    public static byte[] encryptRSA(byte[] dataToEncrypt, RSAPublicKey encryptionKey) throws NoSuchAlgorithmException,
+            InvalidKeyException, NoSuchPaddingException, IllegalBlockSizeException, BadPaddingException {
+
+        Cipher cipher;
+        cipher = Cipher.getInstance("RSA/ECB/OAEPWITHSHA-256ANDMGF1PADDING");
+        cipher.init(Cipher.ENCRYPT_MODE, encryptionKey);
+
+        return cipher.doFinal(dataToEncrypt);
+    }
+
+    public static RSAPublicKey buildRSAPublicKey(String algorithm, byte[] keyModulus)
+            throws NoSuchAlgorithmException, InvalidKeySpecException {
+        KeyFactory factory = KeyFactory.getInstance(algorithm);
+        RSAPublicKeySpec publicSpec = new RSAPublicKeySpec(new BigInteger(format(keyModulus), 16),
+                BigInteger.valueOf(65537));
+        return (RSAPublicKey) factory.generatePublic(publicSpec);
+    }
+
+    /**
+     * 
+     * @param stream
+     * @param separator
+     * @return
+     */
+    public static String format(byte[] stream) {
+        if (stream != null) {
+            StringBuilder buf = new StringBuilder();
+            for (int i = 0; i < stream.length; i++) {
+                if (stream[i] >= 0x00 && stream[i] <= 0x0F) {
+                    buf.append("0");
+                }
+                buf.append(Integer.toHexString(((stream[i] < 0) ? (stream[i] + 256) : stream[i])));
+            }
+            return buf.toString().toUpperCase();
+        }
+        return null;
+    }
+
+    public static RSAPublicKey generateRandomRSAPublicKey() {
+        log.info(" - Generating random RSA public key");
+        RSAPublicKey rsaPublicKey = null;
+        try {
+            KeyPairGenerator kpg = KeyPairGenerator.getInstance("RSA");
+            kpg.initialize(2048);
+            KeyPair kp = kpg.generateKeyPair();
+            rsaPublicKey = (RSAPublicKey) kp.getPublic();
+        } catch (NoSuchAlgorithmException e) {
+            log.error(" - Error generating public key", e);
+        }
+        return rsaPublicKey;
+    }
+
+    /**
+     * Escape a string.
+     * 
+     * @param text
+     * @charactersEscapeList contains the list of characters to escape, associated
+     *                       to the corresponding escape sequence
+     * @return
+     * @author Simone Miccoli
+     * 
+     */
+    public static String escape(String text) {
+        String result = null;
+        log.debug(" - Using default escape chars map");
+        if (text != null) {
+            result = text;
+            Set<Entry<String, String>> charactersToEscape = null;
+            charactersToEscape = ESCAPE_CHARACTER.entrySet();
+            for (Entry<String, String> entry : charactersToEscape) {
+                result = result.replaceAll(entry.getValue(), entry.getKey());
+            }
+        }
+        return result;
+    }
+
+    public static String escape(String text, Map<String, String> escapeHtmlChars) {
+        String result = null;
+        if (escapeHtmlChars == null) {
+            result = escape(text);
+        } else {
+            if (text != null) {
+                result = text;
+                Set<Entry<String, String>> charactersToEscape = null;
+                charactersToEscape = escapeHtmlChars.entrySet();
+                for (Entry<String, String> entry : charactersToEscape) {
+                    result = result.replaceAll(entry.getValue(), entry.getKey());
+                }
+            }
+        }
+        return result;
+    }
+
+    public static String tracerJobTimeLeft() {
+        LocalTime oraCorrente = LocalTime.now();
+        LocalTime oraAggiornata = oraCorrente.plusHours(1);
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("HH:mm");
+
+        return oraAggiornata.format(formatter);
+    }
+
 }
